# aa-final-project-stuff

./: .gitignore  .pre-commit-config.yaml  README.md  amazon.ipynb  amazon.py  amazon_cleanup.ipynb  amazon_cleanup.py  pyproject.toml  rating_plots.ipynb  rating_plots.py  vote_plot.ipynb  vote_plot.py  wordcloud.ipynb  wordcloud.py
report/: report.tex
src/: amazon.ipynb  amazon.py  amazon_cleanup.ipynb  amazon_cleanup.py  amazon_tfidf.py  better_success_metric.ipynb  better_success_metric.py  rating_plots.ipynb  rating_plots.py  sentiment.ipynb  sentiment.py  term_matrix.ipynb  term_matrix.py  vote_plot.ipynb  vote_plot.py  wordclouds.ipynb  wordclouds.py
src/1_preprocess/: cleanup.ipynb  cleanup.py  sentiment.ipynb  sentiment.py  success_metric.ipynb  success_metric.py
src/2_train/: k_means.ipynb  k_means.py  term_matrix.ipynb  term_matrix.py  tfidf.ipynb  tfidf.py  util.py
src/plots/: rating_plots.ipynb  rating_plots.py  vote_plot.ipynb  vote_plot.py  wordclouds.ipynb  wordclouds.py
