[tool.poetry]
name = "comedy-sentiment"
version = "0.1.0"
description = ""
authors = ["Andreas Brodersen <43907402+AndreasPB@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.13.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
