[tool.poetry]
name = "amazon-sentiment"
version = "0.1.0"
description = ""
authors = ["Andreas Brodersen <43907402+AndreasPB@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.13.0"
pandas = "^1.4.2"
openpyxl = "^3.0.9"
nltk = "^3.7"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
